// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiToolTip anchor props are rendered 1`] = `
<span
  class="euiToolTipAnchor customAnchorClass1"
  data-test-subj="DTS"
>
  <button>
    Trigger
  </button>
</span>
`;

exports[`EuiToolTip display prop renders block 1`] = `
<span
  class="euiToolTipAnchor euiToolTipAnchor--displayBlock"
>
  <button>
    Trigger
  </button>
</span>
`;

exports[`EuiToolTip is rendered 1`] = `
<span
  class="euiToolTipAnchor"
>
  <button>
    Trigger
  </button>
</span>
`;

exports[`EuiToolTip shows tooltip on focus 1`] = `
<span
  class="euiToolTipAnchor"
>
  <button
    aria-describedby="id"
    data-test-subj="trigger"
  >
    Trigger
  </button>
</span>
`;
